changed the color of the hover button on the cards

--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -95,7 +95,7 @@ a.hover-effects:hover {
 }
 
 .card .btn-primary:hover {
-    background-color: white;
+    background-color: #556B2F;
     color: black;
 }
 
