--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -15,6 +15,7 @@ body {
 a.textInNavBar {
     color: #F6E8D5;
     font-size: large;
+    font-family: sans-serif;
 }
 
 a.textInNavBar:hover {
@@ -34,6 +35,7 @@ a.textInNavBar:hover {
     font-size: calc(2.5rem + 1vw); /* Dynamic font size for all screens */
     font-weight: bold;
     color: #6AA84F;
+    font-family: sans-serif;
 }
 
 .lead {
@@ -155,6 +157,7 @@ footer h5.text-in-fotter {
 a.hover-effects {
     font-size: medium;
     color: white;
+    font-family: sans-serif;
 }
 
 a.hover-effects:hover {
@@ -173,6 +176,7 @@ a.hover-effects:hover {
 .text-color
 {
     color: #4A4A4A;
+    font-family: sans-serif;
 }
 
 .contrast
@@ -183,4 +187,8 @@ a.hover-effects:hover {
 .card-title
 {
     color: #ffffff
+}
+option.style-for-text-in-options
+{
+    font-family: sans-serif;
 }
