--- a/fitness-and-health-website/stylesheet-about-us.css
+++ b/fitness-and-health-website/stylesheet-about-us.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
-h2.headersInAboutUs
-{
-    font-size: 50px;
-    color: yellow;
-    text-align: center;
-}
+
 
 img.styleForImgInAboutUs
 {
@@ -135,29 +130,8 @@ td.heightAndWidthForTdInAboutUs
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Priorität vor anderen Elementen */
+    z-index: 1000;
 }
-
-.menu-button-wrapper {
-    display: flex;
-    align-items: center;
-    margin-left: 1em;
-}
-
-.title {
-    flex: 1;
-    text-align: center;
-    font-size: 3em;
-    color: yellow;
-    margin: 0;
-}
-
-.li-items-in-sidebar {
-    margin-left: 5%;
-}
-
-
-
 
 a.hover-effects {
     font-size: medium;
@@ -166,22 +140,6 @@ a.hover-effects {
 
 a.hover-effects:hover {
     color: #6AA84F;
-}
-
-
-
-@keyframes transition-color-in-nav {
-    from
-    {
-        background: black;
-
-    }
-    to
-    {
-        background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
-        -webkit-background-clip: text; /* Clippt den Hintergrund auf den Text */
-        -webkit-text-fill-color: transparent; /* Macht den Text selbst transparent */
-    }
 }
 
 
@@ -196,7 +154,7 @@ h1.h1-in-about-us
 {
 
     text-align: center;
-    margin-top: 7%;
+    margin-top: 9%;
     font-size: calc(2.5rem + 1vw);
     font-weight: bold;
     color: #6AA84F;
